# arcade-orb-workflow

./: .gitignore  README.md
arcade/orb_toolkit/: LICENSE  Makefile  README.md  engine.dev.yaml  pyproject.toml  worker.toml
arcade/orb_toolkit/.github/workflows/: publish-to-pypi.yml
arcade/orb_toolkit/arcade_orb_toolkit/: __init__.py  toolkit.yaml
arcade/orb_toolkit/arcade_orb_toolkit/tools/: __init__.py  orb_api.py
arcade/orb_toolkit/evals/: eval_orb_toolkit.py
arcade/orb_toolkit/tests/: test_orb_api.py
orb-workflow/: .env.example  clear_processed_emails.py  file_watcher.py  fix_pdf.py  langgraph_orchestrator.py  multiagent_workflow.py  processed_files.json  pyproject.toml  requirements.txt  test_arcade_worker.py  workflow.py
orb-workflow/agents/: __init__.py  billing_configurator_agent.py  document_processor_agent.py  document_watcher_agent.py  email_watcher_agent.py  orchestrator.py  slack_human_verification_agent.py
orb-workflow/custom_tools/: README.md  chat.py  deploy_tools.py  gmail.py  gmail_attachment_tool.py  gmail_attachment_tool_direct.py  requirements.txt  slack_helper.py  worker.toml
orb-workflow/custom_tools/gmailer/: Makefile  README.md  pyproject.toml
orb-workflow/custom_tools/gmailer/evals/: eval_gmailer.py
orb-workflow/custom_tools/tests/: test_attachment_analysis.py  test_email_agent.py  test_email_attachments.py  test_email_contents.py  test_email_watcher.py  test_email_watcher_simple.py  test_gmail_attachment_tools.py  test_known_attachment.py  test_pdf_repair.py
orb-workflow/documents/email_temp/: email_1963c6a44198a644.txt  email_196407c6b9f7757a.txt  email_196407c9fc4d0162.txt  email_196407d0ec3d1a1c.txt  processed_emails.json
(+12 files in other folders)
