[tool.poetry]
name = "arcade_orb_toolkit"
version = "0.1.0"
description = "A Mock Orb API Toolkit"
authors = ["shubcodes <shub@solutioneers.ai>"]
packages = [{include = "arcade_orb_toolkit"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arcade-ai = "^1.2.0"
openai = ">=1.36.0,<2.0.0"
httpx = "^0.27.0"
pydantic = "^2.0"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
respx = "^0.20.2"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

# Use Poetry's plugin syntax for the entry point
[tool.poetry.plugins."arcade.toolkits"]
orb_toolkit = "arcade_orb_toolkit"
